# ROKEY-COBOT2-FINAL

./: README.md  package.xml  setup.cfg  setup.py
01_data/calibration/: T_cam2base.npy  T_gripper2camera.npy  dist_coeffs.npy
02_gemini_robot_pkg/: app.py  ear.py  muscle_1.py  nerve.py  users.db
02_gemini_robot_pkg/install/: local_setup.sh  setup.sh
05_templates/: layout.html  login.html
data/calibration/: camera_matrix.npy  matrix.json
gemini_robot_pkg/: app_1.py  brain.py  brain_connected.py  calib_node.py  eye.py  eye_ui.py  mouth.py
gemini_robot_pkg/install/: setup.ps1
gemini_robot_pkg/log/: latest_build
static/: style.css
templates/: index.html
