<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_model_v3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gemini_robot_pkg</name>
  <version>0.0.1</version>
  <description>Gemini Robotics ER 1.5 Framework for Doosan M0609</description>
  <maintainer email="ssy@example.com">Seoyoung Song</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>dsr_msgs2</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>